--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -12,3 +12,11 @@
     display: flex;
     flex-direction: column;
 }
+.error {
+    color: darkred;
+    margin: 10px 20px;
+}
+.errorInfo {
+    color: #aaa;
+    margin-top: 20px;
+}
