--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -7,10 +7,16 @@
     font-family: "Roboto Mono", "Courier New", "Courier", monospace;
     padding: 10px 15px;
     height: 100%;
-    color: #ccc;
-    background-color: #111;
     display: flex;
     flex-direction: column;
+}
+:global .theme-dark {
+    color: #ddd;
+    background-color: #222;
+}
+:global .theme-light {
+    color: #222;
+    background-color: #eee;
 }
 .error {
     color: darkred;
