Redux Toolkit migration + space news example

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,8 +1,9 @@
 .app {
     @font-face {
         font-family: "Roboto Mono";
-        src: url("../../fonts/RobotoMono-Regular.woff2") format("woff2"),
-            url("../../fonts/RobotoMono-Regular.woff") format("woff");
+        src:
+            url("../fonts/RobotoMono-Regular.woff2") format("woff2"),
+            url("../fonts/RobotoMono-Regular.woff") format("woff");
     }
     font-family: "Roboto Mono", "Courier New", "Courier", monospace;
     padding: 10px 15px;
@@ -13,6 +14,15 @@
 :global .theme-dark {
     color: #ddd;
     background-color: #222;
+    a {
+        color: #aaa;
+        &:visited {
+            color: #777;
+        }
+        &:hover {
+            color: #fff;
+        }
+    }
 }
 :global .theme-light {
     color: #222;
