--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,12 +1,12 @@
 :root {
-    --color-text-dark: #dbdbdb;
+    --color-text-dark: #ededed;
     --color-bg-dark: #222222;
     --color-link-dark: #aaaaaa;
     --color-link-visited-dark: #777777;
     --color-link-hover-dark: #ffffff;
 
     --color-text-light: #222222;
-    --color-bg-light: #eeeeee;
+    --color-bg-light: #e1e1e1;
     --color-link-light: #0066cc;
     --color-link-visited-light: #551a8b;
     --color-link-hover-light: #004080;
