--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -2,33 +2,46 @@
 
 .header {
     display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
+    justify-content: space-between;
+    align-items: center;
     gap: 1rem;
+    padding: 0.5rem 1rem;
     path {
         fill: var(--color-text);
     }
-    .themeToggle {
-        cursor: pointer;
-        &:hover path {
-            fill: var(--color-link-hover) !important;
-        }
-
-        &:visited path {
-            fill: var(--color-text);
-        }
-    }
-    a.gitHubLink {
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
+    a {
         text-decoration: none;
-        &:hover path {
-            fill: var(--color-link-hover) !important;
-        }
-
-        &:visited path {
-            fill: var(--color-text);
-        }
     }
+    margin-bottom: 1rem;
+    border-bottom: 1px solid var(--color-text);
+}
+.themeToggle {
+    cursor: pointer;
+    &:hover path {
+        fill: var(--color-link-hover) !important;
+    }
+
+    &:visited path {
+        fill: var(--color-text);
+    }
+}
+.gitHubLink {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    text-decoration: none;
+    &:hover path {
+        fill: var(--color-link-hover) !important;
+    }
+
+    &:visited path {
+        fill: var(--color-text);
+    }
+}
+
+.headerButtons {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    align-items: flex-start;
 }
